# mcc-ctl-parser

./: Cargo.toml  README.md
src/: lib.rs  parser.rs  xml_util.rs
tests/: lib.rs
tests/inputs/: CTLCardinality.xml  CTLFireability.xml
